--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Главная</title>
-        <meta charset="UTF-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <link rel="stylesheet" href="css/style.min.css" />
-        <!-- <link rel="shortcut icon" href="favicon.ico" /> -->
-        <!-- <meta name="robots" content="noindex, nofollow"> -->
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    </head>
+    <!--= include('_head.html', {title: "Главная"}) -->
     <body>
         <div class="wrapper">
-            <!-- include('_header.html',{}) -->
-            <main class="page"></main>
+            <!--= include('_header.html',{}) -->
+            <main class="page main">
+                <div class="main__container _container">
+                    <div class="main__logo logo">
+                        <img src="./img/tensor-logo.png" alt="" class="logo__img" />
+                    </div>
+                    <p class="main__header header">TENSOR SCHOOL</p>
+                    <div class="main__image">
+                        <img src="./img/undraw-workers.png" alt="" class="main__image-item" />
+                    </div>
+                    <p class="main__text">
+                        Это страница школы Тензор. Тут вы можете познакомиться с нашими учениками и посмотреть темы
+                        занятий.
+                    </p>
+                </div>
+            </main>
             <!-- include('_footer.html',{}) -->
         </div>
     </body>
