classmates page is made without pixel perfect yet

--- a/client/src/_header.html
+++ b/client/src/_header.html
@@ -1,5 +1,22 @@
 <header class="header">
     <div class="header__container _container">
-        
+        <div class="header__menu menu">
+            <button type="button" class="menu__icon icon-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav class="menu__body">
+                <ul class="menu__list">
+                    <li class="menu__item"><a href="" class="menu__link"></a></li>
+                </ul>
+            </nav>
+        </div>
+        <a href="#" class="header__logo logo">
+            <div class="logo__img _ibg">
+                <img src="./img/tensor-logo.png" alt="" class="_mobile" />
+            </div>
+            <p class="logo__title">TENSOR SCHOOL</p>
+        </a>
     </div>
 </header>
