--- a/client/src/classmates.html
+++ b/client/src/classmates.html
@@ -3,11 +3,55 @@
     <!--= include('_head.html', {title: "Одноклассники"}) -->
     <body>
         <div class="wrapper">
-            <!-- include('_header.html',{}) -->
+            <!--= include('_header.html',{}) -->
             <main class="page classmates">
-                <div class="classmates__container _container"></div>
+                <div class="classmates__container _container">
+                    <div class="classmates__list list">
+                        <div class="list__card card">
+                            <div class="card__img">
+                                <img src="./img/1.png" alt="" />
+                            </div>
+                            <p class="card__user-name">Мария Иванова1</p>
+                            <p class="card__about">УГАТУ 2 курс<span>г. Уфа</span></p>
+                        </div>
+                        <div class="list__card card">
+                            <div class="card__img">
+                                <img src="./img/1.png" alt="" />
+                            </div>
+                            <p class="card__user-name">Мария Иванова2</p>
+                            <p class="card__about">УГАТУ 2 курс<span>г. Уфа</span></p>
+                        </div>
+                        <div class="list__card card">
+                            <div class="card__img">
+                                <img src="./img/1.png" alt="" />
+                            </div>
+                            <p class="card__user-name">Мария Иванова3</p>
+                            <p class="card__about">УГАТУ 2 курс<span>г. Уфа</span></p>
+                        </div>
+                        <div class="list__card card">
+                            <div class="card__img">
+                                <img src="./img/1.png" alt="" />
+                            </div>
+                            <p class="card__user-name">Мария Иванова4</p>
+                            <p class="card__about">УГАТУ 2 курс<span>г. Уфа</span></p>
+                        </div>
+                        <div class="list__card card">
+                            <div class="card__img">
+                                <img src="./img/1.png" alt="" />
+                            </div>
+                            <p class="card__user-name">Мария Иванова5</p>
+                            <p class="card__about">УГАТУ 2 курс<span>г. Уфа</span></p>
+                        </div>
+                        <div class="list__card card">
+                            <div class="card__img">
+                                <img src="./img/1.png" alt="" />
+                            </div>
+                            <p class="card__user-name">Антон Николаев</p>
+                            <p class="card__about">ТГУ 4 курс<span>г. Томск</span></p>
+                        </div>
+                    </div>
+                </div>
             </main>
-            <!-- include('_footer.html',{}) -->
         </div>
     </body>
     <script src="./js/index.min.js"></script>
