--- a/client/src/classmates.html
+++ b/client/src/classmates.html
@@ -6,7 +6,7 @@
             <!--= include('_header.html',{}) -->
             <main class="page classmates">
                 <div class="classmates__container _container">
-                    <div class="classmates__list list">
+                    <section class="classmates__list list">
                         <div class="list__card card">
                             <div class="card__img">
                                 <img src="./img/1.png" alt="" />
@@ -49,7 +49,7 @@
                             <p class="card__user-name">Антон Николаев</p>
                             <p class="card__about">ТГУ 4 курс<span>г. Томск</span></p>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </main>
         </div>
